--- a/package.json
+++ b/package.json
@@ -15,24 +15,40 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.1.1",
+    "@material-tailwind/react": "^2.1.9",
     "@portabletext/react": "3.0.11",
     "@sanity/client": "6.12.4",
     "@sanity/image-url": "1.0.2",
     "@sanity/preview-url-secret": "1.6.1",
     "@sanity/vision": "3.29.0",
     "@sanity/visual-editing": "1.2.2",
+    "@types/node": "^18.6.3",
+    "@types/nodemailer": "^6.4.14",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@vercel/analytics": "^1.1.1",
     "@vercel/og": "0.6.2",
+    "@vercel/speed-insights": "^1.0.5",
     "classnames": "2.5.1",
     "date-fns": "2.30.0",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "intl-segmenter-polyfill": "0.4.4",
     "next": "14.1.0",
     "next-sanity": "8.0.0",
     "next-sanity-image": "6.1.1",
     "react": "18.2.0",
+    "react-calendly": "^4.3.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.30.1",
+    "react-spinners": "^0.13.8",
     "sanity": "3.29.0",
     "sanity-plugin-asset-source-unsplash": "1.1.2",
     "sanity-plugin-iframe-pane": "3.1.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "6.1.8",
     "swr": "2.2.4"
   },
