new feature added

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^16.3.1",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "exit-intent": "^1.1.0",
     "intl-segmenter-polyfill": "0.4.4",
     "next": "14.1.0",
     "next-sanity": "8.0.0",
@@ -44,8 +45,11 @@
     "react": "18.2.0",
     "react-calendly": "^4.3.0",
     "react-dom": "18.2.0",
+    "react-responsive-modal": "^6.4.2",
+    "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.1",
     "react-spinners": "^0.13.8",
+    "reactjs-popup": "^2.0.6",
     "sanity": "3.29.0",
     "sanity-plugin-asset-source-unsplash": "1.1.2",
     "sanity-plugin-iframe-pane": "3.1.3",
