--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next-sanity-image": "6.1.1",
     "react": "18.2.0",
     "react-calendly": "^4.3.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "18.2.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.3",
