--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "exit-intent": "^1.1.0",
+    "gray-matter": "^4.0.3",
     "intl-segmenter-polyfill": "0.4.4",
+    "mdast-util-to-string": "^4.0.0",
     "next": "14.1.0",
     "next-sanity": "8.0.0",
     "next-sanity-image": "6.1.1",
@@ -51,12 +53,14 @@
     "react-slick": "^0.30.1",
     "react-spinners": "^0.13.8",
     "reactjs-popup": "^2.0.6",
+    "remark": "^15.0.1",
     "sanity": "3.29.0",
     "sanity-plugin-asset-source-unsplash": "1.1.2",
     "sanity-plugin-iframe-pane": "3.1.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "6.1.8",
-    "swr": "2.2.4"
+    "swr": "2.2.4",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "18.2.55",
