--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next": "14.1.0",
     "next-sanity": "8.0.0",
     "next-sanity-image": "6.1.1",
+    "rc-progress": "^4.0.0",
     "react": "18.2.0",
     "react-calendly": "^4.3.0",
     "react-cookie": "^7.1.4",
