--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
     "@portabletext/react": "3.0.11",
+    "@portabletext/to-html": "^2.0.13",
     "@sanity/client": "6.12.4",
     "@sanity/image-url": "1.0.2",
     "@sanity/preview-url-secret": "1.6.1",
