--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@material-tailwind/react": "^2.1.9",
     "@portabletext/react": "3.0.11",
     "@portabletext/to-html": "^2.0.13",
+    "@sanity/asset-utils": "1.0.0",
+    "@sanity/block-content-to-react": "2.0.6",
     "@sanity/client": "6.12.4",
-    "@sanity/image-url": "1.0.2",
+    "@sanity/image-url": "^1.0.2",
     "@sanity/preview-url-secret": "1.6.1",
     "@sanity/vision": "3.29.0",
     "@sanity/visual-editing": "1.2.2",
