--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@portabletext/react": "3.0.11",
     "@portabletext/to-html": "^2.0.13",
+    "@remix-run/node": "^2.9.1",
     "@sanity/asset-utils": "1.0.0",
     "@sanity/block-content-to-react": "2.0.6",
     "@sanity/client": "6.12.4",
