--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-calendly": "^4.3.0",
     "react-cookie": "^7.1.4",
     "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.1",
