--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "exit-intent": "^1.1.0",
     "graphql": "^16.8.1",
     "gray-matter": "^4.0.3",
+    "http-proxy-middleware": "^3.0.0",
     "intl-segmenter-polyfill": "0.4.4",
     "mdast-util-to-string": "^4.0.0",
     "next": "14.1.0",
