--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@heroicons/react": "^2.1.1",
+    "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
     "@portabletext/react": "3.0.11",
     "@portabletext/to-html": "^2.0.13",
@@ -31,7 +31,6 @@
     "@sanity/visual-editing": "1.2.2",
     "@types/node": "^18.6.3",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vercel/analytics": "^1.2.2",
     "@vercel/og": "0.6.2",
@@ -44,18 +43,21 @@
     "emailjs-com": "^3.2.0",
     "exit-intent": "^1.1.0",
     "gray-matter": "^4.0.3",
+    "heroicons": "^2.1.5",
     "http-proxy-middleware": "^3.0.0",
     "intl-segmenter-polyfill": "0.4.4",
+    "lottie-web": "^5.12.2",
     "mdast-util-to-string": "^4.0.0",
     "next": "14.1.0",
     "next-sanity": "8.0.0",
     "next-sanity-image": "6.1.1",
     "rc-progress": "^4.0.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-calendly": "^4.3.0",
     "react-cookie": "^7.1.4",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
+    "react-lottie": "^1.2.4",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.1",
@@ -71,7 +73,7 @@
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
-    "@types/react": "18.2.55",
+    "@types/react": "^18.2.55",
     "@types/styled-components": "5.1.34",
     "autoprefixer": "10.4.17",
     "eslint": "8.56.0",
