--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
+    "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.22.3",
