seo glossary pages added

--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "exit-intent": "^1.1.0",
     "gray-matter": "^4.0.3",
     "heroicons": "^2.1.5",
+    "html-entities": "^2.5.2",
     "http-proxy-middleware": "^3.0.0",
     "intl-segmenter-polyfill": "0.4.4",
     "lottie-web": "^5.12.2",
+    "lucide-react": "^0.436.0",
     "mdast-util-to-string": "^4.0.0",
     "next": "14.1.0",
     "next-sanity": "8.0.0",
