--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@vercel/og": "0.6.2",
     "@vercel/speed-insights": "^1.0.10",
     "@wordpress/block-library": "^8.35.0",
+    "axios": "^1.7.7",
     "classnames": "2.5.1",
     "date-fns": "2.30.0",
     "dotenv": "^16.3.1",
@@ -53,6 +54,7 @@
     "next": "14.1.0",
     "next-sanity": "8.0.0",
     "next-sanity-image": "6.1.1",
+    "razorpay": "^2.9.4",
     "rc-progress": "^4.0.0",
     "react": "^18.2.0",
     "react-calendly": "^4.3.0",
