--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@sanity/preview-url-secret": "1.6.1",
     "@sanity/vision": "3.29.0",
     "@sanity/visual-editing": "1.2.2",
+    "@sendgrid/mail": "^8.1.3",
     "@types/node": "^18.6.3",
     "@types/nodemailer": "^6.4.14",
     "@types/react-dom": "^18.0.6",
