--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "html-entities": "^2.5.2",
     "http-proxy-middleware": "^3.0.0",
     "intl-segmenter-polyfill": "0.4.4",
+    "isomorphic-dompurify": "^2.18.0",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.436.0",
     "mdast-util-to-string": "^4.0.0",
